--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.seefaribacode.onboarding.maintainable-code</groupId>
-    <artifactId>hello</artifactId>
+    <groupId>com.seefaribacode.onboarding</groupId>
+    <artifactId>maintainable-code</artifactId>
     <version>1.3.0</version>
     <packaging>war</packaging>
 </project>
