--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,12 @@
     <artifactId>maintainable-code</artifactId>
     <version>1.3.0</version>
     <packaging>war</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
